--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^=5.6.13",
     "morgan": "^1.9.1",
     "node-sass-middleware": "0.11.0",
+    "nodemailer": "^6.3.1",
+    "nodemailer-juice": "^1.0.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
